Fix menu flex direction on mobile

--- a/src/assets/styles/components/_nav.pcss
+++ b/src/assets/styles/components/_nav.pcss
@@ -1,3 +1,3 @@
-#nav-toggle:checked~nav {
-@apply flex
+#nav-toggle:checked ~ nav {
+    @apply flex;
 }
